fix: improve widget select option contrast

--- a/app/javascript/widget/assets/scss/woot.scss
+++ b/app/javascript/widget/assets/scss/woot.scss
@@ -101,6 +101,10 @@ select:not(.reset-base) {
   background-repeat: no-repeat;
   background-size: 9px 6px;
   font-family: inherit;
+
+  option {
+    @apply bg-white text-slate-600;
+  }
 }
 
 p code {
